--- a/src/main/resources/templates/insercion.html
+++ b/src/main/resources/templates/insercion.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Ordenamiento por Selección</title>
+    <title>Ordenamiento por Inserción</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -26,14 +26,14 @@
 </nav>
 
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Ordenamiento por Selección</h2>
+    <h2 class="text-center mb-4">Ordenamiento por Inserción</h2>
 
     <div class="card p-4 shadow-sm">
-        <form th:action="@{/seleccion}" method="post">
+        <form th:action="@{/insercion}" method="post">
             <div class="mb-3">
                 <label for="numeros" class="form-label">Ingresa números separados por coma:</label>
                 <input type="text" id="numeros" name="numeros" class="form-control"
-                       placeholder="Ejemplo: 5, 3, 8, 4, 2"
+                       placeholder="Ejemplo: 123, 3, 1, 12"
                        th:value="${numerosIngresados}">
                 <div th:if="${error}" class="text-danger mt-2" th:text="${error}"></div>
             </div>
