--- a/src/main/resources/templates/quicksort.html
+++ b/src/main/resources/templates/quicksort.html
@@ -7,9 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-</body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/inicio}">Algoritmos</a>
@@ -27,5 +24,23 @@
         </div>
     </div>
 </nav>
-
+    <div class="container mt-5">
+        <h2 class="text-center mb-4">Ordenación por Quicksort</h2>
+        <div class="card p-4 shadow-sm">
+        <form>
+            <div class="mb-3">
+                <label for="numero" class="form-label">Introduce un número</label>
+                <input type="number" class="form-control" id="numero" step="1">
+                <button type="button" onclick="verificar()">
+                    +
+                </button>
+            </div>
+        </form>
+            <div id="alerta" >
+            </div>
+        </div>
+    </div>
+<script src="/js/quicksort.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+</body>
 </html>
