--- a/src/main/resources/templates/quicksort.html
+++ b/src/main/resources/templates/quicksort.html
@@ -28,15 +28,17 @@
         <h2 class="text-center mb-4">Ordenación por Quicksort</h2>
         <div class="card p-4 shadow-sm">
         <form>
-            <div class="mb-3">
-                <label for="numero" class="form-label">Introduce un número</label>
-                <input type="number" class="form-control" id="numero" step="1">
-                <button type="button" onclick="verificar()">
-                    +
-                </button>
+            <div class="input-group mb-3">
+                <input type="number" class="form-control" id="numero" step="1" placeholder="Introduce un número">
+                <span class="input-group-text btn btn-outline-dark">
+                    <button type="button" onclick="verificar()" class="btn">
+                        +
+                    </button>
+                </span>
             </div>
+            <button type="button" class="btn btn-outline-dark">Ordenar</button>
         </form>
-            <div id="alerta" >
+            <div id="alerta" style="position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 9999; opacity:0.9;">
             </div>
         </div>
     </div>
