--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -37,46 +37,93 @@
 <div class="container mt-5">
     <h4>Caso 1</h4>
     <pre>
-for(int i=0; i&lt;n; i++) {          O(n)
-    for(int j=0; j&lt;n; j++) {      O(n)
-        if(i == j)                O(1)
-            matriz[i][j] = 1;     O(1)
+for(int i=0; i&lt;n; i++) {
+    for(int j=0; j&lt;n; j++) {
+        if(i == j)
+            matriz[i][j] = 1;
         else
-            matriz[i][j] = 0;     O(1)
+            matriz[i][j] = 0;
     }
 }
 
-        Complejidad total: n×(n×O(1))=n×n = O(n²)
+Complejidad total: O(n²)
     </pre>
 </div>
 
 <div class="container mt-5">
     <h4>Caso 2</h4>
     <pre>
-suma = 0;                        O(1)
-for(int i=0; i&lt;n; i++) {         O(n)
-    if(i % 2 == 0)               O(1)
-        suma += i;               O(1)
+suma = 0;
+for(int i=0; i&lt;n; i++) {
+    if(i % 2 == 0)
+        suma += i;
 }
-System.out.println(suma);        O(1)
+System.out.println(suma);
 
-        Complejidad total: O(1)+n×(O(1)+O(1))+O(1)
-                            O(1)+O(n)+O(1) = O(n)
+Complejidad total: O(n)
     </pre>
 </div>
 
 <div class="container mt-5">
     <h4>Caso 3</h4>
     <pre>
-int i = n;                       O(1)
-int contador = 0;                O(1)
-while(i &gt; 1) {                   O(log n)
-    i = i / 2;                   O(1)
-    contador++;                  O(1)
+int i = n;
+int contador = 0;
+while(i &gt; 1) {
+    i = i / 2;
+    contador++;
 }
-System.out.println(contador);    O(1)
+System.out.println(contador);
 
-        Complejidad total: O(1)+O(1)+O(logn×1)+O(1) = O(log n)
+Complejidad total: O(log n)
+    </pre>
+</div>
+
+<div class="container mt-5">
+    <h4>Caso 4</h4>
+    <pre>
+for(int i=0; i&lt;n; i++) {
+    for(int j=i; j&lt;n; j++) {
+        if(arr[i] &gt; arr[j]) {
+            int temp = arr[i];
+            arr[i] = arr[j];
+            arr[j] = temp;
+        }
+    }
+}
+
+Complejidad total: O(n²)
+    </pre>
+</div>
+
+<div class="container mt-5">
+    <h4>Caso 5</h4>
+    <pre>
+int suma = 0;
+for(int i=0; i&lt;n; i++) {
+    for(int j=0; j&lt;10; j++) {
+        suma += j;
+    }
+}
+System.out.println(suma);
+
+Complejidad total: O(n)
+    </pre>
+</div>
+
+<div class="container mt-5">
+    <h4>Caso 6</h4>
+    <pre>
+int i = 0;
+while(i &lt; n) {
+    if(i % 3 == 0)
+        System.out.println(i);
+    else
+        System.out.println(i * 2);
+    i++;
+}
+
+Complejidad total: O(n)
     </pre>
 </div>
 <div class="container mt-5">
