--- a/src/main/resources/templates/mergesort.html
+++ b/src/main/resources/templates/mergesort.html
@@ -11,13 +11,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/inicio}">Algoritmos</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" th:href="@{/burbuja}">Burbuja</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/insercion}">Inserción</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/seleccion}">Selección</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/quicksort}">QuickSort</a></li>
-                <li class="nav-item"><a class="nav-link active" th:href="@{/mergesort}">MergeSort</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PC 1</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/inicio}">Casos</a></li>
+                        <li><a class="dropdown-item" th:href="@{/burbuja}">Burbuja</a></li>
+                        <li><a class="dropdown-item" th:href="@{/insercion}">Inserción</a></li>
+                        <li><a class="dropdown-item" th:href="@{/seleccion}">Selección</a></li>
+                        <li><a class="dropdown-item" th:href="@{/quicksort}">QuickSort</a></li>
+                        <li><a class="dropdown-item" th:href="@{/mergesort}">MergeSort</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a class="nav-link " th:href="@{/inicio2}">PC 2</a></li>
+
             </ul>
         </div>
     </div>
