--- a/src/main/resources/templates/agenteViajero.html
+++ b/src/main/resources/templates/agenteViajero.html
@@ -59,9 +59,10 @@
                     <ul class="dropdown-menu dropdown-menu-end">
                         <li><a class="dropdown-item" th:href="@{/cambioMoneda}">Cambio de Moneda</a></li>
                         <li><a class="dropdown-item" th:href="@{/agenteViajero}">Agente Viajero</a></li>
+                        <li><a class="dropdown-item" th:href="@{/dijkstra}">Dijkstra</a></li>
+                        <li><a class="dropdown-item" th:href="@{/kruskal}">Kruskal</a></li>
                     </ul>
                 </li>
-
             </ul>
         </div>
     </div>
