--- a/src/main/resources/templates/mergesort.html
+++ b/src/main/resources/templates/mergesort.html
@@ -27,8 +27,15 @@
                         <li><a class="dropdown-item" th:href="@{/mergesort}">MergeSort</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link " th:href="@{/inicio2}">PC 2</a></li>
-
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PC 2</a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" th:href="@{/cambioMoneda}">Cambio de Moneda</a></li>
+                        <li><a class="dropdown-item" th:href="@{/agenteViajero}">Agente Viajero</a></li>
+                        <li><a class="dropdown-item" th:href="@{/dijkstra}">Dijkstra</a></li>
+                        <li><a class="dropdown-item" th:href="@{/kruskal}">Kruskal</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
