--- a/src/main/resources/templates/cambioMoneda.html
+++ b/src/main/resources/templates/cambioMoneda.html
@@ -34,6 +34,7 @@
                     <ul class="dropdown-menu dropdown-menu-end">
                         <li><a class="dropdown-item" th:href="@{/cambioMoneda}">Cambio de Moneda</a></li>
                         <li><a class="dropdown-item" th:href="@{/agenteViajero}">Agente Viajero</a></li>
+                        <li><a class="dropdown-item" th:href="@{/permutaciones}">Permutaciones</a></li>
                     </ul>
                 </li>
             </ul>
