--- a/src/main/resources/templates/agenteViajero.html
+++ b/src/main/resources/templates/agenteViajero.html
@@ -62,6 +62,7 @@
                         <li><a class="dropdown-item" th:href="@{/permutaciones}">Permutaciones</a></li>
                         <li><a class="dropdown-item" th:href="@{/dijkstra}">Dijkstra</a></li>
                         <li><a class="dropdown-item" th:href="@{/kruskal}">Kruskal</a></li>
+                        <li><a class="dropdown-item" th:href="@{/recursivos}">Recursivos</a></li>
                     </ul>
                 </li>
             </ul>
