--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -33,7 +33,12 @@
                         <li><a class="dropdown-item" th:href="@{/agenteViajero}">Agente Viajero</a></li>
                     </ul>
                 </li>
-
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">T1</a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" th:href="@{/asignacion}">Problema de Asignación</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
