--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -39,6 +39,14 @@
                         <li><a class="dropdown-item" th:href="@{/asignacion}">Problema de Asignación</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Ejercicios</a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" th:href="@{/}">Ejercicio 1</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" th:href="@{/montecarlo}">Ejercicio 2: Área (Montecarlo)</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
