--- a/src/main/resources/templates/agenteViajero.html
+++ b/src/main/resources/templates/agenteViajero.html
@@ -45,7 +45,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PC 1</a>
-                    <ul class="dropdown-menu dropdown-menu-end">
+                    <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/inicio}">Casos</a></li>
                         <li><a class="dropdown-item" th:href="@{/burbuja}">Burbuja</a></li>
                         <li><a class="dropdown-item" th:href="@{/insercion}">Inserción</a></li>
@@ -62,6 +62,13 @@
                         <li><a class="dropdown-item" th:href="@{/permutaciones}">Permutaciones</a></li>
                         <li><a class="dropdown-item" th:href="@{/dijkstra}">Dijkstra</a></li>
                         <li><a class="dropdown-item" th:href="@{/kruskal}">Kruskal</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PC 3</a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" th:href="@{/mochila}">Mochila</a></li>
+                        <li><a class="dropdown-item" th:href="@{/floyd}">Floyd</a></li>
                     </ul>
                 </li>
             </ul>
