--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -36,6 +36,12 @@
                         <li><a class="dropdown-item" th:href="@{/recursivos}">Recursivos</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PC 3</a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" th:href="@{/mochila}">Mochila</a></li>
+                        <li><a class="dropdown-item" th:href="@{/floyd}">Floyd</a></li>
+                    </ul>
             </ul>
         </div>
     </div>
