--- a/src/main/resources/templates/dijkstra.html
+++ b/src/main/resources/templates/dijkstra.html
@@ -31,8 +31,16 @@
                     <ul class="dropdown-menu dropdown-menu-end">
                         <li><a class="dropdown-item" th:href="@{/cambioMoneda}">Cambio de Moneda</a></li>
                         <li><a class="dropdown-item" th:href="@{/agenteViajero}">Agente Viajero</a></li>
+                        <li><a class="dropdown-item" th:href="@{/permutaciones}">Permutaciones</a></li>
                         <li><a class="dropdown-item" th:href="@{/dijkstra}">Dijkstra</a></li>
                         <li><a class="dropdown-item" th:href="@{/kruskal}">Kruskal</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PC 3</a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" th:href="@{/mochila}">Mochila</a></li>
+                        <li><a class="dropdown-item" th:href="@{/floyd}">Floyd</a></li>
                     </ul>
                 </li>
             </ul>
