--- a/src/main/resources/templates/mergesort.html
+++ b/src/main/resources/templates/mergesort.html
@@ -37,6 +37,13 @@
                         <li><a class="dropdown-item" th:href="@{/kruskal}">Kruskal</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PC 3</a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" th:href="@{/mochila}">Mochila</a></li>
+                        <li><a class="dropdown-item" th:href="@{/floyd}">Floyd</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
