--- a/src/main/resources/templates/permutaciones.html
+++ b/src/main/resources/templates/permutaciones.html
@@ -15,17 +15,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PC 1</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" th:href="@{/inicio}">Casos</a></li>
-            <li><a class="dropdown-item" th:href="@{/burbuja}">Burbuja</a></li>
-            <li><a class="dropdown-item" th:href="@{/insercion}">Inserción</a></li>
-            <li><a class="dropdown-item" th:href="@{/seleccion}">Selección</a></li>
-            <li><a class="dropdown-item" th:href="@{/quicksort}">QuickSort</a></li>
-            <li><a class="dropdown-item" th:href="@{/mergesort}">MergeSort</a></li>
-          </ul>
-        </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PC 1</a>
+              <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" th:href="@{/inicio}">Casos</a></li>
+                  <li><a class="dropdown-item" th:href="@{/burbuja}">Burbuja</a></li>
+                  <li><a class="dropdown-item" th:href="@{/insercion}">Inserción</a></li>
+                  <li><a class="dropdown-item" th:href="@{/seleccion}">Selección</a></li>
+                  <li><a class="dropdown-item" th:href="@{/quicksort}">QuickSort</a></li>
+                  <li><a class="dropdown-item" th:href="@{/mergesort}">MergeSort</a></li>
+              </ul>
+          </li>
           <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PC 2</a>
               <ul class="dropdown-menu dropdown-menu-end">
@@ -34,6 +34,13 @@
                   <li><a class="dropdown-item" th:href="@{/permutaciones}">Permutaciones</a></li>
                   <li><a class="dropdown-item" th:href="@{/dijkstra}">Dijkstra</a></li>
                   <li><a class="dropdown-item" th:href="@{/kruskal}">Kruskal</a></li>
+              </ul>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">PC 3</a>
+              <ul class="dropdown-menu dropdown-menu-end">
+                  <li><a class="dropdown-item" th:href="@{/mochila}">Mochila</a></li>
+                  <li><a class="dropdown-item" th:href="@{/floyd}">Floyd</a></li>
               </ul>
           </li>
       </ul>
